<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showAlertDialog" />

    <Button
        android:id="@+id/btnAlertDialogList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showAlertDialogList" />

    <Button
        android:id="@+id/btnAlertDialogSinglePersistentList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showAlertDialogSinglePersistentList" />

    <Button
        android:id="@+id/btnAlertDialogMultiPersistentList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showAlertDialogMultiPersistentList" />

    <Button
        android:id="@+id/btnCustomAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showCustomAlertDialog" />
</LinearLayout>